# emare-token

./: CHANGELOG.md  CONTRIBUTING.md  COPILOT_SESSION_HAFIZA.md  DERVISHIN_CEYIZI.md  DOSYA_YAPISI.md  EMARE-TOKEN_HAFIZA.md  EMARE_AI_COLLECTIVE.md  EMARE_ANAYASA.md  EMARE_ORTAK_HAFIZA.md  Makefile  QUICKSTART_DEV.md  README.md  anahtarlar.py  deploy.json  emare_messenger.py  pyproject.toml  setup.sh  start.sh
.github/: copilot-instructions.md
src/: __init__.py
tests/: __init__.py  test_ceyiz.py  test_main.py
web_dizayn/: STYLE_NOTLARI.md  emare-token_style.html
