[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emare-token"
version = "0.1.0"
description = "EMARE token ve blockchain kütüphanesi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
